# KAPy

./: .gitignore  app.py  database_init.py  dicom_logic.py  pyproject.toml
static/css/: style.css
static/js/: dicom_script.js  script.js
templates/: admin.html  base.html  index.html  moje_fotky.html  muj_dicom.html  prihlaseni.html  registrace.html
