[project]
name = "pybox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pydicom>=3.0.2",
    "python-dotenv>=1.2.2",
    "werkzeug>=3.1.6",
]
